# fastapi-edgedb-example

./: .gitignore  README.md  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
src/fastapi_edgedb_example/: app.py  asgi.py  config.py  db.py
src/fastapi_edgedb_example/user/: endpoints.py
