[tool.poetry]
name = "fastapi-edgedb-example"
version = "0.1.0"
description = ""
authors = ["Samuel <bugeta4u@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.64.0"
uvicorn = "^0.13.4"
gunicorn = "^20.1.0"
edgedb = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
